ligolang/src/test/contracts/negative/bad_contract3.mligo
type storage = int
type parameter = nat
type return = operation list * string

let main (action, store : parameter * storage) : return =
  (([]: operation list),"bad")